<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ElbowExtensionPage" >

    <TextView
        android:id="@+id/ArmRotationProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/armRotationProgressButton"
        android:layout_alignBottom="@+id/armRotationProgressButton"
        android:layout_alignParentRight="true"
        android:text="@string/progress_arm_rotation"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/ClawStretchProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clawStretchProgressButton"
        android:layout_alignBottom="@+id/clawStretchProgressButton"
        android:layout_alignLeft="@+id/ArmRotationProgress"
        android:text="@string/progress_claw_stretch"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/ElbowExtensionProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/elbowExtentionProgressButton"
        android:layout_alignBottom="@+id/elbowExtentionProgressButton"
        android:layout_alignLeft="@+id/ClawStretchProgress"
        android:text="@string/progress_elbow_extension"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/FingerGripProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fingerGripProgressButton"
        android:layout_alignBottom="@+id/fingerGripProgressButton"
        android:layout_alignLeft="@+id/ElbowExtensionProgress"
        android:text="@string/progress_finger_grip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/FingerLiftProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fingerLiftProgressButton"
        android:layout_alignBottom="@+id/fingerLiftProgressButton"
        android:layout_alignLeft="@+id/FingerGripProgress"
        android:text="@string/progress_finger_lift"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/WristFlexProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wristFlexProgressButton"
        android:layout_alignBottom="@+id/wristFlexProgressButton"
        android:layout_alignLeft="@+id/ThumbStretchProgress"
        android:text="@string/progress_wrist_flex"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/ThumbStretchProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/thumbStretchProgressButton"
        android:layout_alignBottom="@+id/thumbStretchProgressButton"
        android:layout_alignLeft="@+id/RadialDeviationProgress"
        android:text="@string/progress_thumb_stretch"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/RadialDeviationProgress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radialDeviationProgressButton"
        android:layout_alignBottom="@+id/radialDeviationProgressButton"
        android:layout_alignLeft="@+id/FingerLiftProgress"
        android:text="@string/progress_radial_deviation"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/progressPageInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/progress_page_instruction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button android:id="@+id/armRotationProgressButton" style="?android:attr/borderlessButtonStyle" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_below="@+id/progressPageInstruction" android:text="@string/exercise_text_arm_rotation" /><Button android:id="@+id/fingerGripProgressButton" style="?android:attr/borderlessButtonStyle" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_below="@+id/fingerLiftProgressButton" android:text="@string/exercise_text_finger_grip" />

    <Button
        android:id="@+id/radialDeviationProgressButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/armRotationProgressButton"
        android:layout_below="@+id/ArmRotationProgress"
        android:text="@string/exercise_text_radial_deviation" />

    <Button
        android:id="@+id/thumbStretchProgressButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radialDeviationProgressButton"
        android:layout_below="@+id/RadialDeviationProgress"
        android:text="@string/exercise_text_thumb_stretch" />

    <Button
        android:id="@+id/elbowExtentionProgressButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thumbStretchProgressButton"
        android:layout_below="@+id/ThumbStretchProgress"
        android:onClick="goToElbowExtentionProgressDetailPage"
        android:text="@string/exercise_text_elbow_extension" />

    <Button
        android:id="@+id/wristFlexProgressButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/elbowExtentionProgressButton"
        android:layout_below="@+id/ElbowExtensionProgress"
        android:text="@string/exercise_text_wrist_flex" />

    <Button
        android:id="@+id/clawStretchProgressButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wristFlexProgressButton"
        android:layout_below="@+id/WristFlexProgress"
        android:text="@string/exercise_botton_text_claw_stretch" />

    <Button
        android:id="@+id/fingerLiftProgressButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/clawStretchProgressButton"
        android:layout_below="@+id/ClawStretchProgress"
        android:onClick="goToFingerLiftProgressDetailPage"
        android:text="@string/exercise_text_finger_lift" />

</RelativeLayout>