<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToArmRotationPage"
                android:text="@string/exercise_text_arm_rotation" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToElbowExtensionPage"
                android:text="@string/exercise_text_elbow_extension" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToFingerGripPage"
                android:text="@string/exercise_text_finger_grip" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToFingerLiftPage"
                android:text="@string/exercise_text_finger_lift" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToRadialDeviationPage"
                android:text="@string/exercise_text_radial_deviation" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToThumbStretchPage"
                android:text="@string/exercise_text_thumb_stretch" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToWristFlexPage"
                android:text="@string/exercise_text_wrist_flex" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginTop="0dp"
                android:layout_weight="0.39"
                android:max="100" />

            <TextView
                android:id="@+id/progressPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero_percent"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/homeButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="goToHomePage"
                    android:text="@string/home" />

            </RelativeLayout>

        </LinearLayout>


        </ScrollView>