<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ThumbStretchPage" >

    <TextView
        android:id="@+id/ArmRotationProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/exercise_text_thumb_stretch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/thumb_stretch_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:onClick="viewTutorial"
        android:text="@string/exercise_tutorial_check_box" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goBack"
        android:text="@string/back_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/thumb_stretch_tutorial"
        android:layout_alignRight="@+id/thumb_stretch_tutorial"
        android:layout_marginBottom="14dp"
        android:onClick="goToExercisePage"
        android:text="@string/exercise_start_botton_text" />

</RelativeLayout>
